--- a/express/Contact.html
+++ b/express/Contact.html
@@ -6,13 +6,13 @@
     <title>Document</title>
 </head>
 <body>
+
     <nav> 
         <a href="/">Home</a>
         <a href="/contact">Contact
         </a>
     </nav>
-
-    <h1>this come from sendFile</h1>
-   
+    <h1>Contact</h1>
+    
 </body>
 </html>
