--- a/express/Contact.html
+++ b/express/Contact.html
@@ -8,9 +8,10 @@
 <body>
 
     <nav> 
-        <a href="/">Home</a>
+        <a href="/home">Home</a>
         <a href="/contact">Contact
         </a>
+        <a href="/" >Ecom</a>
     </nav>
     <h1>Contact</h1>
     
