--- a/express/home.html
+++ b/express/home.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     <nav> 
-        <a href="/">Home</a>
-        <a href="/contact">Contact
-        </a>
+        <a href="/home">Home</a>
+        <a href="/contact">Contact </a>
+        <a href="/" >Ecom</a>
     </nav>
 
-    <h1>this come from sendFile</h1>
+    <h1>Home page</h1>
    
 </body>
 </html>
