req.param feature added

--- a/express/Contact.html
+++ b/express/Contact.html
@@ -12,6 +12,8 @@
         <a href="/contact">Contact
         </a>
         <a href="/" >Ecom</a>
+        <a href="/api">api</a>
+
     </nav>
     <h1>Contact</h1>
     
