--- a/express/home.html
+++ b/express/home.html
@@ -10,6 +10,7 @@
         <a href="/home">Home</a>
         <a href="/contact">Contact </a>
         <a href="/" >Ecom</a>
+        <a href="/api">api</a>
     </nav>
 
     <h1>Home page</h1>
